check the inbox

--- a/indexx.html
+++ b/indexx.html
@@ -14,7 +14,7 @@
 <br>
 <br>
 
-<h2>...WELCOME YOU ALL... <br> <br> 
+<h2>...WELCOME YOU ALL!!... <br> <br> 
 	Is this Current css BackGround Page<br><br>
 	 Hi Prathab Its All for YOu.<br><br><br>
 	 .....Thanks For Visiting..... <br><br> <img src="https://img.freepik.com/premium-vector/wreath-thank-you-simple-illustration-sign_185757-524.jpg"></h2>
